# movie_publisher

./: .gitignore  README.md
.github/: ci.melodic.rosinstall  ci.noetic.rosinstall
.github/workflows/: ci.yaml
camera_info_manager_lib/: CHANGELOG.rst  CMakeLists.txt  package.xml
camera_info_manager_lib/include/camera_info_manager_lib/: camera_info_manager.h
camera_info_manager_lib/src/: camera_info_manager.cpp
camera_info_manager_metadata_extractor/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosdoc.yaml
camera_info_manager_metadata_extractor/src/: CamInfoManagerMetadataExtractor.cpp  CamInfoManagerMetadataExtractor.h
exiftool_metadata_extractor/: CHANGELOG.rst  CMakeLists.txt  package.xml
exiftool_metadata_extractor/src/: ExiftoolMetadataExtractor.cpp  ExiftoolMetadataExtractor.h
exiftool_metadata_extractor/src/cpp_exiftool/: CMakeLists.txt
exiv2_metadata_extractor/: CHANGELOG.rst  CMakeLists.txt  package.xml
exiv2_metadata_extractor/src/: Exiv2CustomMakernotes.cpp  Exiv2CustomMakernotes.h  Exiv2MetadataExtractor.cpp  Exiv2MetadataExtractor.h
exiv2_metadata_extractor/test/: test_extractor.cpp
lensfun_metadata_extractor/: CHANGELOG.rst  CMakeLists.txt  package.xml
lensfun_metadata_extractor/src/: LensfunMetadataExtractor.cpp  LensfunMetadataExtractor.h
lensfun_metadata_extractor/test/: test_extractor.cpp
libexif_metadata_extractor/: CHANGELOG.rst  CMakeLists.txt  package.xml
libexif_metadata_extractor/src/: LibexifCustomMakernotes.cpp  LibexifCustomMakernotes.h  LibexifMetadataExtractor.cpp  LibexifMetadataExtractor.h
libexif_metadata_extractor/test/: test_extractor.cpp
movie_publisher/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rosdoc.yaml
movie_publisher/include/movie_publisher/: metadata_extractor.h  metadata_manager.h  movie_reader.h
movie_publisher/include/movie_publisher/metadata/: ExifBaseMetadataExtractor.h  FileMetadataExtractor.h  FilenameMetadataExtractor.h  LibavStreamMetadataExtractor.h
movie_publisher/launch/: movie_publisher.launch
movie_publisher/nodelets/: movie_publisher_nodelet.cpp
movie_publisher/nodes/: add_movie_to_bag  merge.py  movie_publisher_node  movie_publisher_nodelet.cpp  movie_to_bag.cpp
movie_publisher/scripts/: movie_to_bag
movie_publisher/src/: metadata_manager.cpp  movie_reader.cpp  movie_reader_private.cpp  movie_reader_private.h  movie_reader_ros.cpp  movie_to_bag.cpp
movie_publisher/src/metadata/: ExifBaseMetadataExtractor.cpp  FileMetadataExtractor.cpp  FilenameMetadataExtractor.cpp  LibavStreamMetadataExtractor.cpp
movie_publisher/test/: test_movie_publisher_nodelet.cpp  test_movie_reader.cpp
movie_publisher_plugins/: CHANGELOG.rst  package.xml
movie_publisher_plugins_copyleft/: CHANGELOG.rst  package.xml
movie_publisher_plugins_nonfree/: CHANGELOG.rst  package.xml
movie_publisher_plugins_permissive/: CHANGELOG.rst  package.xml
